# 2048-game

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
src/: game.cpp  game.hpp  game_ui.cpp  game_ui.hpp  homepage.cpp  homepage.hpp  main.cpp
src/core/: CMakeLists.txt  game_core.hpp
src/ui/: CMakeLists.txt  animation.cpp  animation.hpp  theme.hpp  tile.cpp  tile.hpp
src/utils/: CMakeLists.txt  row_merge.cpp  row_merge.hpp
test/: CMakeLists.txt  main.cpp  ui_main.cpp
